[gd_scene load_steps=21 format=3 uid="uid://cojkicds8uf8c"]

[ext_resource type="Script" path="res://enemy/boss.gd" id="1_m1li8"]
[ext_resource type="PackedScene" uid="uid://bthvww1tlvr4y" path="res://enemy/weapons/bullet_shapes/slice.tscn" id="2_175li"]
[ext_resource type="Script" path="res://enemy/weapons/bullet.gd" id="3_km3fg"]
[ext_resource type="Texture2D" uid="uid://dlholuxpiqcq7" path="res://enemy/circle_boss.png" id="4_2bc68"]
[ext_resource type="AudioStream" uid="uid://4ufymnnqi2ni" path="res://sound/sfx/lasers/Laser-weapon5.wav" id="4_2vhea"]
[ext_resource type="Script" path="res://enemy/weapons/attack.gd" id="4_nn3en"]
[ext_resource type="Texture2D" uid="uid://bb6ccfu1fmffu" path="res://assets/Effects/Explosion_16x16.png" id="4_t0exc"]
[ext_resource type="PackedScene" uid="uid://6t7gq1rbqydp" path="res://enemy/weapons/bullet_shapes/spinning_ball.tscn" id="5_5x416"]

[sub_resource type="Resource" id="Resource_2lfxa"]
script = ExtResource("3_km3fg")
bullet_type = 0
bullet_pattern = 0
bullet_shape = ExtResource("2_175li")
position = Vector2(0, 0)
speed = 30
angle = 90.0
shot_delay = 0.0
aimed = false

[sub_resource type="Resource" id="Resource_gm6yx"]
script = ExtResource("4_nn3en")
attack_name = "Katana of Death"
Firing_Sequence = Array[ExtResource("3_km3fg")]([SubResource("Resource_2lfxa")])

[sub_resource type="Resource" id="Resource_aw3sq"]
script = ExtResource("3_km3fg")
bullet_type = 1
bullet_pattern = 0
bullet_shape = ExtResource("5_5x416")
position = Vector2(0, 0)
speed = 30
angle = 90.0
shot_delay = 0.0
aimed = false

[sub_resource type="Resource" id="Resource_qo2vl"]
script = ExtResource("4_nn3en")
attack_name = "Spin shot"
Firing_Sequence = Array[ExtResource("3_km3fg")]([SubResource("Resource_aw3sq")])

[sub_resource type="CircleShape2D" id="CircleShape2D_8rgpy"]
radius = 18.0

[sub_resource type="Animation" id="Animation_4pyvs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_2bc68")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_oa838"]
resource_name = "explode"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_t0exc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_s31ch"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_158ad"]
resource_name = "shooting"
length = 2.0
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.6, 0.75, 1.35, 1.5, 1.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_j5u58"]
resource_name = "shooting_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_oxk5s"]
resource_name = "shooting_3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h123k"]
_data = {
"RESET": SubResource("Animation_4pyvs"),
"explode": SubResource("Animation_oa838"),
"hit": SubResource("Animation_s31ch"),
"shooting": SubResource("Animation_158ad"),
"shooting_2": SubResource("Animation_j5u58"),
"shooting_3": SubResource("Animation_oxk5s")
}

[node name="CircleBoss" type="Area2D" groups=["boss", "enemy"]]
position = Vector2(0, -50)
collision_layer = 10
audio_bus_override = true
audio_bus_name = &"SFX"
script = ExtResource("1_m1li8")
Attacks = Array[ExtResource("4_nn3en")]([SubResource("Resource_gm6yx"), SubResource("Resource_qo2vl")])
firing_sound = ExtResource("4_2vhea")
title = "Circle"
is_boss = true
hp = 100

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_2bc68")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8rgpy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_h123k")
}

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -5)

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 4.5

[node name="MilkingTimer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="MilkingTimer" to="." method="_on_milking_timer_timeout"]
